--- a/CA2/part1/gradle_basic_demo/build.gradle
+++ b/CA2/part1/gradle_basic_demo/build.gradle
@@ -49,7 +49,6 @@ jar {
 }
 
 
-
 task runClient(type:JavaExec, dependsOn: classes){
     group = "DevOps"
     description = "Launches a chat client that connects to a server on localhost:59001 "
@@ -70,4 +69,12 @@ task runServer(type:JavaExec, dependsOn: classes){
     mainClass = 'basic_demo.ChatServerApp'
 
     args '59001'
+}
+
+task backupSource(type: Copy){
+    group = "DevOps"
+    description = "Copies the source files to a backup directory"
+
+    from 'src'
+    into 'backup'
 }
