CA2 - added backup zip task closes #7

--- a/CA2/part1/gradle_basic_demo/build.gradle
+++ b/CA2/part1/gradle_basic_demo/build.gradle
@@ -78,3 +78,12 @@ task backupSource(type: Copy){
     from 'src'
     into 'backup'
 }
+
+task backupZip(type: Zip) {
+    group = "DevOps"
+    description = "Copies the source files to a backup directory"
+
+    from 'src'
+    archiveFileName = "sources.zip"
+    destinationDir = file("backup_zip")
+}
