CA2 - added copy generated jar file task closes #10, refers #9

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 **/CA2/part1/gradle_basic_demo/backup/**
 **/src/main/resources/static/built/**
 **/example_application/**
+**/node
+**/.frontend-gradle-plugin
 
 
 # User-specific stuff
@@ -114,7 +116,7 @@ fabric.properties
 .mtj.tmp/
 
 # Package Files #
-*.jar
+**.jar
 *.war
 *.nar
 *.ear
