--- a/CA3/part2/react-and-spring-data-rest-basic/build.gradle
+++ b/CA3/part2/react-and-spring-data-rest-basic/build.gradle
@@ -2,8 +2,9 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.4'
     id 'io.spring.dependency-management' version '1.1.4'
-
     id "org.siouan.frontend-jdk17" version "8.0.0"
+
+    id 'war'
 }
 
 group = 'com.greglturnquist'
@@ -23,6 +24,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // To support war file for deploying to tomcat
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
 frontend {
@@ -31,17 +35,3 @@ frontend {
     cleanScript = "run clean"
     checkScript = "run check"
 }
-
-task copyJar(type: Copy) {
-    from 'build/libs'
-    into 'dist'
-    include '*.jar'
-}
-// Make the 'copyJar' task depend on the 'bootJar' task to ensure the JAR file is generated before copying
-copyJar.dependsOn bootJar
-
-task deleteWebpackFiles(type: Delete) {
-    delete 'src/main/resources/static/built/'
-}
-// Make the 'clean' task depend on the 'deleteWebpackFiles' task to ensure the webpack files are deleted before cleaning
-clean.dependsOn deleteWebpackFiles
