--- a/CA2/part2/react-and-spring-data-rest-basic/build.gradle
+++ b/CA2/part2/react-and-spring-data-rest-basic/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
 
     id "org.siouan.frontend-jdk17" version "8.0.0"
+    id 'war'
 }
 
 group = 'com.greglturnquist'
@@ -23,6 +24,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
 frontend {
@@ -30,6 +32,10 @@ frontend {
     assembleScript = "run build"
     cleanScript = "run clean"
     checkScript = "run check"
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
 
 task copyJar(type: Copy) {
