CA5 - updated jenkinsfile #23

--- a/CA2/part1/gradle_basic_demo/Jenkinsfile
+++ b/CA2/part1/gradle_basic_demo/Jenkinsfile
@@ -10,22 +10,28 @@ pipeline {
         }
         stage('Assemble') {
             steps {
+                dir('CA2/part1/gradle_basic_demo'){
                 echo 'Assembling...'
                 sh 'chmod +x gradlew'
                 sh './gradlew clean assemble'
+                }
             }
         }
         stage('Test') {
             steps {
+                dir('CA2/part1/gradle_basic_demo'){
                 echo 'Testing...'
                 sh './gradlew test'
                 junit 'build/test-results/test/*.xml'
+                }
             }
         }
         stage('Archive') {
             steps {
+                dir('CA2/part1/gradle_basic_demo'){
                 echo 'Archiving...'
                 archiveArtifacts 'build/distributions/*'
+                }
             }
         }
     }
